src/objects/Welcome_Call_Details__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Mobile_No__c</fullName>
        <label>Applicant Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bank_RM_Contact_Number__c</fullName>
        <label>Bank RM Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bank_RM_Email__c</fullName>
        <label>Bank RM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bank_RM__c</fullName>
        <label>Bank RM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_RM_details_for_followup__c</fullName>
        <label>Bank RM details for followup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>Bank__c</referenceTo>
        <relationshipLabel>Welcome Call Details</relationshipLabel>
        <relationshipName>Welcome_Call_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booking amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Disposion__c</fullName>
        <label>Call Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Welcome call accepted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome call rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold/Needs More Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ringing/Switched Off/Not reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call back request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Disposition_L2__c</fullName>
        <label>Call Disposition L2</label>
        <picklist>
            <controllingField>Call_Disposion__c</controllingField>
            <picklistValues>
                <fullName>Greetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-allocation not done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Constraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency on Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency on CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency on Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Parks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car Parks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clients_expectation_for_registration__c</fullName>
        <label>Clients expectation for registration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Applicant Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Welcome Call Details</relationshipLabel>
        <relationshipName>Welcome_Call_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNC_Disclaimer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNC Disclaimer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earnest_money_forefeiture_amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Earnest money forefeiture amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flat_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flat No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forefeiture_Disclaimer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forefeiture Disclaimer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Self_Funding_or_Bank_Funding__c</fullName>
        <label>Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Self Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Funding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Landline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_sanctioned_or_not__c</fullName>
        <label>Loan sanctioned or not?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Applicant_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Applicant Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_help_in_home_loan__c</fullName>
        <label>Need help in home loan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Payment_due__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Payment due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Our_office_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share working hours with the customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAN_card_of_Co_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAN card of Co Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAN_card_of_Main_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAN card of Main Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next payment schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_booking_amount_with_date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Token amount date(CHQ/DD/RTGS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_of_Booking_broker_name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source of Booking (broker name)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tentative_date_for_Possession__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tentative date for posession to be share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tentative_date_for_registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tentative date for registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tower</label>
        <type>Checkbox</type>
    </fields>
    <label>Welcome Call Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WCD-{0000}</displayFormat>
        <label>Welcome Call Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welcome Call Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>